correction chapitre 5, figures chapitre 7

--- a/03-SOM/source.tex
+++ b/03-SOM/source.tex
@@ -7,7 +7,7 @@
     \setcounter{chapter}{1}
 }{}
 \begin{document}
-\chapter{Modèle d'architecture CxSOM}
+\chapter{Modèle d'architecture CxSOM}{\label{chap:modele}}
 \graphicspath{{03-SOM/},{./}}
 \minitoc
 
